<resources>
    <string name="app_name">Voca</string>
    <string name="login_T">로그인</string>
    <string name="register_T">회원가입</string>
    <string name="Memoize_T">Memorize English Words</string>
    <string name="ID_T">*ID</string>
    <string name="PW_T">*PW</string>
    <string name="Return_T">뒤로가기</string>
    <string name="Name_T">*이름</string>
    <string name="Email_T">*E-mail</string>
    <string name="Tel_T">전화번호</string>
    <string name="Birth_T">생년월일</string>
    <string name="TargetScore_T">목표점수</string>
    <string name="NickName_T">*닉네임</string>
</resources>