<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/white"
    tools:context=".Login_Form">

    <TextView
        android:id="@+id/Main_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Memoize_T"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Login" />

    <Button
        android:id="@+id/register"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#A9BFFF"
        android:gravity="center"
        android:text="@string/register_T"
        android:textAlignment="center"
        android:textColor="#FFFAFA"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/login_T"
        android:backgroundTint="#A9BFFF"
        android:textColor="#FFFAFA"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/ID_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="64dp"
        android:text="@string/ID_T"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/PW_text"
        app:layout_constraintEnd_toStartOf="@+id/ID_Input"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/PW_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="90dp"
        android:text="@string/PW_T"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toStartOf="@+id/PW_INPUT"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ID_Input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/textbox"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/PW_INPUT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ID_text"
        app:layout_constraintTop_toBottomOf="@+id/Main_Text"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/PW_INPUT"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/textbox"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PW_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linearLayout_Login"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:background="@color/sky"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/VOCA_T"
            android:layout_width="148dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="VOCA"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/login_radio_G"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Main_Text">

        <RadioButton
            android:id="@+id/user_l_radio"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:buttonTint="@color/sky"
            android:checked="true"
            android:text="사용자"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/admin_l_radio"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:buttonTint="@color/sky"
            android:text="관리자"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/find_id_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="ID/PW찾기"
        android:backgroundTint="#A9BFFF"
        android:textColor="#FFFAFA"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_btn"
        app:layout_constraintStart_toEndOf="@+id/register" />

</androidx.constraintlayout.widget.ConstraintLayout>